FIX: Fix word wrapping between words

--- a/src/app/tasks/task-comments-viewer/task-comments-viewer.scss
+++ b/src/app/tasks/task-comments-viewer/task-comments-viewer.scss
@@ -7,25 +7,25 @@
 }
 
 .wrapword {
-  white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
-  white-space: -webkit-pre-wrap; /*Chrome & Safari */
-  white-space: -pre-wrap;      /* Opera 4-6 */
-  white-space: -o-pre-wrap;    /* Opera 7 */
-  white-space: pre-wrap;       /* css-3 */
-  word-wrap: break-word;       /* Internet Explorer 5.5+ */
-  word-break: break-all;
-  white-space: normal;
+-ms-word-break: break-all;
+    word-break: break-all;
+
+ /* Non standard for webkit */
+     word-break: break-word;
+
+    -webkit-hyphens: auto;
+       -moz-hyphens: auto;
+        -ms-hyphens: auto;
+            hyphens: auto;
 }
 
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Chrome/Safari/Opera */
-     -khtml-user-select: none; /* Konqueror */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
-                                  not supported by any browser */
-                cursor:default;
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;           /* for future vendor support */
+  cursor:default;
 }
 
 .task-comments-viewer .comment {
